WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111313
Web Inspector: [Elements] XSLT transformation result from the xml-stylesheet PI not rendered
https://bugs.webkit.org/show_bug.cgi?id=111313
Summary
Web Inspector: [Elements] XSLT transformation result from the xml-stylesheet ...
Alexander Pavlov (apavlov)
Reported
2013-03-04 06:31:20 PST
Steps to reproduce the problem: 1. browse to xml transformed by xsl into html with dev tools closed (ex:
http://www.w3schools.com/xsl/cdcatalog_with_xsl.xml
) 2. open developer tools, elements pane. html dom is displayed correctly 3. refresh page What is the expected behavior? display refreshed, retransformed xml as html DOM in dev tools elements pane What went wrong? elements pane displays only one childless node 'xml-stylesheet' Upstreaming
https://code.google.com/p/chromium/issues/detail?id=179265
Attachments
Patch
(11.47 KB, patch)
2013-03-05 03:06 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(12.59 KB, patch)
2013-03-07 07:08 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(12.44 KB, patch)
2013-03-07 08:00 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
Patch
(12.24 KB, patch)
2013-03-07 08:02 PST
,
Alexander Pavlov (apavlov)
vsevik
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2013-03-05 03:06:00 PST
Created
attachment 191452
[details]
Patch
Vivek Galatage
Comment 2
2013-03-05 19:39:03 PST
Comment on
attachment 191452
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191452&action=review
> Source/WebCore/inspector/InspectorInstrumentation.h:1656 > +inline void InspectorInstrumentation::documentUpdated(Frame* frame, Document* document)
A general question: When to use FAST_RETURN_IF_NO_FRONTENDS as I see there are different versions of implementations of the instrumentation methods of which some use this macro while others don't? Any rule of thumb is there with respect to usage of the macro?
Alexander Pavlov (apavlov)
Comment 3
2013-03-07 07:08:12 PST
Created
attachment 191989
[details]
Patch
Vsevolod Vlasov
Comment 4
2013-03-07 07:54:21 PST
Comment on
attachment 191989
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191989&action=review
> Source/WebCore/dom/Document.cpp:4246 > + InspectorInstrumentation::documentUpdated(ownerFrame, ownerFrame->document());
I don't think you need to pass document here.
> Source/WebCore/inspector/InspectorDOMAgent.cpp:1686 > + DocumentLoader* loader = frame->loader()->documentLoader();
I don't think this is needed.
> Source/WebCore/inspector/InspectorInstrumentation.h:1656 > +#if ENABLE(INSPECTOR)
Please add FAST_RETURN_IF_NO_FRONTENDS check here.
Alexander Pavlov (apavlov)
Comment 5
2013-03-07 08:00:12 PST
Created
attachment 192001
[details]
Patch
Vsevolod Vlasov
Comment 6
2013-03-07 08:01:50 PST
Comment on
attachment 192001
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192001&action=review
> Source/WebCore/inspector/InspectorDOMAgent.cpp:54 > +#include "DocumentLoader.h"
Please remove this.
Alexander Pavlov (apavlov)
Comment 7
2013-03-07 08:02:33 PST
Created
attachment 192003
[details]
Patch
Alexander Pavlov (apavlov)
Comment 8
2013-03-11 00:19:09 PDT
Committed
r145342
: <
http://trac.webkit.org/changeset/145342
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug