Web Inspector: [Elements] XSLT transformation result from the xml-stylesheet PI not rendered https://bugs.webkit.org/show_bug.cgi?id=111313

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Frame document update upon XSL transformation was never instrumented.
This change instruments the Document::applyXSLTransform() method to that end.

Test: http/tests/inspector/styles/xsl-transformed.xml

* dom/Document.cpp:
(WebCore::Document::applyXSLTransform): Instrumented.
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::frameDocumentUpdated): Invoked upon applyXSLTransform().
* inspector/InspectorDOMAgent.h:
* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::frameDocumentUpdatedImpl): Added.
* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::didCommitLoad): Drive-by: simplified.
(WebCore::InspectorInstrumentation::frameDocumentUpdated): Added.

LayoutTests:

* http/tests/inspector/styles/resources/xsl-transformed.xsl: Added.
* http/tests/inspector/styles/xsl-transformed-expected.txt: Added.
* http/tests/inspector/styles/xsl-transformed.xml: Added.

Canonical link: https://commits.webkit.org/130303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145342 268f45cc-cd09-0410-ab3c-d52691b4dbfc